button hover/click animation

--- a/index.html
+++ b/index.html
@@ -27,27 +27,27 @@
         <div class="buttons-container flex">
             <div class="button">
                 <input type="tel">
-                <div>ADD</div>
+                <div role="button" tabindex="0">ADD</div>
             </div>
 
             <div class="button">
                 <input type="tel">
-                <div>DEL</div>
+                <div role="button" tabindex="0">DEL</div>
             </div>
             
             <div class="button">
                 <input type="tel">
-                <div>FIND</div>
+                <div role="button" tabindex="0">FIND</div>
             </div>
 
             <div class="brake"></div>
 
             <div class="button">
-                <div>BALANCE TREE</div>
+                <div role="button" tabindex="0">BALANCE TREE</div>
             </div>
 
             <div class="button">
-                <div>TREE STATE</div>
+                <div role="button" tabindex="0">TREE STATE</div>
             </div>
         </div>
 
