button border animation

--- a/index.html
+++ b/index.html
@@ -25,28 +25,28 @@
 
         <!-- Menu -->
         <div class="buttons-container flex">
-            <div class="button">
+            <div class="button" tabindex="0">
                 <input type="tel">
                 <div role="button" tabindex="0">ADD</div>
             </div>
 
-            <div class="button">
+            <div class="button" tabindex="0">
                 <input type="tel">
                 <div role="button" tabindex="0">DEL</div>
             </div>
             
-            <div class="button">
+            <div class="button" tabindex="0">
                 <input type="tel">
                 <div role="button" tabindex="0">FIND</div>
             </div>
 
             <div class="brake"></div>
 
-            <div class="button">
+            <div class="button" tabindex="0">
                 <div role="button" tabindex="0">BALANCE TREE</div>
             </div>
 
-            <div class="button">
+            <div class="button" tabindex="0">
                 <div role="button" tabindex="0">TREE STATE</div>
             </div>
         </div>
