--- a/index.html
+++ b/index.html
@@ -52,5 +52,9 @@
         </div>
 
     </div>
+
+    <!-- JS -->
+    <script src="js/main.js"></script>
+    <script src="js/animations.js"></script>
 </body>
 </html>
