--- a/index.html
+++ b/index.html
@@ -27,27 +27,27 @@
         <div class="buttons-container flex">
             <div class="button" tabindex="0">
                 <input type="tel">
-                <div role="button" tabindex="0">ADD</div>
+                <div role="button" tabindex="0" id="add-button">ADD</div>
             </div>
 
             <div class="button" tabindex="0">
                 <input type="tel">
-                <div role="button" tabindex="0">DEL</div>
+                <div role="button" tabindex="0" id="del-button">DEL</div>
             </div>
             
             <div class="button" tabindex="0">
                 <input type="tel">
-                <div role="button" tabindex="0">FIND</div>
+                <div role="button" tabindex="0" id="find-button">FIND</div>
             </div>
 
             <div class="brake"></div>
 
             <div class="button" tabindex="0">
-                <div role="button" tabindex="0">BALANCE TREE</div>
+                <div role="button" tabindex="0" id="balance-button">BALANCE TREE</div>
             </div>
 
             <div class="button" tabindex="0">
-                <div role="button" tabindex="0">TREE STATE</div>
+                <div role="button" tabindex="0" id="state-button">TREE STATE</div>
             </div>
         </div>
 
