--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/buttons.css">
+  <link rel="stylesheet" href="css/tree.css">
 </head>
 <body>
     <div class="grid-container">
@@ -20,7 +21,7 @@
 
         <!-- Graph -->
         <div class="graph-container">
-
+            <div id="graph"></div>
         </div>
 
         <!-- Menu -->
@@ -54,6 +55,8 @@
     </div>
 
     <!-- JS -->
+    <script src="https://d3js.org/d3.v6.min.js"></script>
+    <script src="js/tree.js"></script>
     <script src="js/main.js"></script>
     <script src="js/animations.js"></script>
 </body>
