tree data structure and node insertion

--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
         <!-- Menu -->
         <div class="buttons-container flex">
             <div class="button" tabindex="0">
-                <input type="tel">
+                <input type="tel" id="add-value">
                 <div role="button" tabindex="0" id="add-button">ADD</div>
             </div>
 
             <div class="button" tabindex="0">
-                <input type="tel">
+                <input type="tel" id="del-value">
                 <div role="button" tabindex="0" id="del-button">DEL</div>
             </div>
             
             <div class="button" tabindex="0">
-                <input type="tel">
+                <input type="tel" id="find-value">
                 <div role="button" tabindex="0" id="find-button">FIND</div>
             </div>
 
