pop up messages function

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
             <div id="graph"></div>
         </div>
 
+        <!-- Message Popup -->
+        <div class="message-container flex">
+
+        </div>
+
         <!-- Menu -->
         <div class="buttons-container flex">
             <div class="button" tabindex="0">
